--- a/myapp/templates/myapp/registration.html
+++ b/myapp/templates/myapp/registration.html
@@ -1,34 +1,29 @@
 <!-- myapp/templates/myapp/registration.html -->
 
 {% extends "myapp/base.html" %} {% block content %}
-<div class="form-content frame">
+<div id="auth-content" class="frame">
 	<h1>Registration</h1>
 	<!-- Form - User -->
 	<form action="" method="post" class="form-horizontal">
 		{% csrf_token %}
-		<div class="user-box">
-			<!-- Errors - username -->
+		<div id="username-field" class="user-box">
 			{% if form.username.errors %}
-			<label class="alert alert-danger">{{ form.username.errors }}</label>
+			<label class="alert">{{ form.username.errors }}</label>
 			{% endif %}
-			<!-- Form field - username -->
-			<input type="text"
-			name="username" required value='{{ form.username.value|default:""}}'>
-			<label>Username</label>
+			<input class="auth-input" type="text" name="username" required value='{{ form.username.value|default:""}}'>
+			<label class="auth-label">Username</label>
 		</div>
-		<div class="user-box">
-			<!-- Errors - password -->
+		<div id="password-field" class="user-box">
 			{% if form.password.errors %}
-			<label class="alert alert-danger">{{ form.password.errors }}</label>
+			<label class="alert">{{ form.password.errors }}</label>
 			{% endif %}
-			<!-- Form field - password -->
-			<input type="password"
-			name="password" required value='{{ form.password.value|default:""}}'>
-			<label>Password</label>
+			<input class="auth-input" type="password" name="password" required value='{{ form.password.value|default:""}}'>
+			<label class="auth-label">Password</label>
 		</div>
-			<!-- Submit button -->
-			<button id="submit-button" type="submit">Register</button>
-
+		<button id="login-submit-button" type="submit">Register</button>
+		<div id="yet-account">
+			<p>Already have an account ? <a href="{% url 'login' %}">Login here</a></p>
+		</div>
 	</form>
 </div>
 {% endblock content %}
