--- a/myapp/static/myapp/test-style.css
+++ b/myapp/static/myapp/test-style.css
@@ -4,89 +4,75 @@
 /* Initialisation générale */
 @font-face {
 	font-family: 'Pieces of Eight';
-	src: url('./Pieces\ of\ Eight.ttf'); /* Remplacez par le chemin de votre fichier de police */
-}
+	src: url('./Pieces\ of\ Eight.ttf');}
 :root {
 	--gold-color: #efd45c;
 	--dark-gold-color: #d8941b;
 	--red-color: #f5554e;
-	--default-font-size: 3vh;
-}
+	--default-font-size: min(3vh, 4.5vw);}
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	text-decoration: none;
 	list-style-type: none;
-	font-family: 'Pieces of Eight';
-}
+	font-family: 'Pieces of Eight';}
 html {
-	overflow: hidden;
-}
+	overflow: hidden;}
 /* Initialisation du texte */
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-label,
-a,
-input {
+p, h1, h2, h3, h4, h5, h6, li, label, a, input {
 	background-color: transparent;
-	color: white;
-}
+	color: white;}
 h1 {
 	color: var(--gold-color);
 	font-size: calc(var(--default-font-size) * 2);
-	margin-bottom: 5vh;
-}
+	margin-bottom: 3vh;}
 h2 {
 	color: var(--dark-gold-color);
 	font-size: calc(var(--default-font-size) * 1.5);
-	margin-bottom: 3vh;
-}
-p,
-li,
-label,
-a,
-input,
-button {
-	font-size: var(--default-font-size);
-}
+	margin-bottom: 2vh;}
+p, li, label, a, input, button {
+	font-size: var(--default-font-size);}
 button, .button {
 	color: black;
 	background-color: var(--gold-color);
 	padding: 0.7vh 1vh;
-	border-radius: 0.5vh;
-}
-button:hover, .button:hover {
-	color: white;
-	box-shadow: 0 0 2vh var(--gold-color);
-	cursor: pointer;
-}
-a:hover {
-	color: var(--gold-color);
-	cursor: pointer;
-}
+	border-radius: 1vh;}
 .frame {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	text-align: center;
 	padding: 3%;
 	background: rgba(0, 0, 0, 0.7);
 	box-sizing: border-box;
 	box-shadow: 0 0 5vh rgba(0, 0, 0, 0.8), 0 0 15vh rgba(0, 0, 0, 0.9);
-	border-radius: 2vh;
-}
+	border-radius: 2vh;}
 .alert {
 	font-size: calc(var(--default-font-size) * 1.2);
 	margin-bottom: 2vh;
-	color: var(--red-color);
-}
+	color: var(--red-color);}
 input[type="password"] { /* Réinitialise la police sur les champs mot de passe (* est inconnu) */
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
+#content {
+	position: relative;
+	height: 90vh;}
+.fullscreen {
+	height: 100%;
+	width: 100%;}
+.background-image {
+	background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 1)),
+		url('./images/background.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;}
+input{
+	padding: 10px 0;
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;}
 /* ! NAVBAR ! */
 #navbar {
 	position: relative;
@@ -94,99 +80,55 @@ input[type="password"] { /* Réinitialise la police sur les champs mot de passe 
 	height: 10vh;
 	background-color: black;
 	justify-content: space-between;
-	align-items: center;
-}
+	align-items: center;}
 .navbar-element {
 	display: flex;
 	align-items: center;
-	width: 33.33%;
-}
+	width: 33.33%;}
 .navbar-link {
 	display: inline-block;
 	text-align: center;
 	padding: 0.7vh 0;
 	font-size: calc(var(--default-font-size) * 1.3);
-	width: 17vh;
-}
+	width: min(17vh, 23vw);}
 #navbar-left {
 	justify-content: left;
-	padding-left: 5vw;
-}
+	padding-left: 5vw;}
 #navbar-center {
-	justify-content: center;
-}
+	justify-content: center;}
 #navbar-right {
 	justify-content: right;
-	padding-right: 5vw;
-}
+	padding-right: 5vw;}
 #navbar-home-logo {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateY(-50%) translateX(-50%);
-	height: 8vh;
-}
-#register-button,
-#signout-button {
+	height: 8vh;}
+#navbar-register-button, #navbar-logout-button {
 	color: black;
-	border-radius: 0.5vw;
-}
-#register-button:hover,
-#signout-button:hover {
-	color: white;
-}
-#signout-button {
-	background-color: var(--red-color);
-}
-#signout-button:hover {
-	color: white;
-	box-shadow: 0 0 2vh var(--red-color);
-}
+	border-radius: 1vh;}
+#navbar-logout-button {
+	background-color: var(--red-color);}
 /* ! HOME ! */
-#content {
-	position: relative;
-	height: 90vh;
-	background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 1)),
-		url('./images/background.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}
 #home-play-button {
-	padding: 1vh 5vh;
+	padding: 1vh 3vh;
 	position: absolute;
-	font-size: calc(var(--default-font-size) * 1.5);
+	font-size: calc(var(--default-font-size) * 2);
 	color: black;
 	background-color: var(--gold-color);
-	top: 50vh;
-	left: 17.5vh;
-	border-radius: 0.5vw;
-}
-#home-play-button:hover {
-	color: white;
-	box-shadow: 0 0 2vh var(--gold-color), 0 0 5vh var(--gold-color);
-	cursor: pointer;
-}
-/* ! AUTH ! */
-#auth-content {
-	position: absolute;
-	top: 50%;
+	top: 75%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 50vh;
-}
+	border-radius: 1vh;}
+/* ! AUTH ! */
+#auth-frame {
+	width: min(80vw, 50vh);}
 .user-box {
 	position: relative;
-}
+	margin: 3vh 0;}
 .auth-input {
-	width: 100%;
-	padding: 10px 0;
-	margin-bottom: 3vh;
-	border: none;
-	border-bottom: 1px solid #fff;
-	outline: none;
-	background: transparent;
-}
+	width: 100%;}
 .auth-label {
 	position: absolute;
 	top:0;
@@ -194,24 +136,80 @@ input[type="password"] { /* Réinitialise la police sur les champs mot de passe 
 	padding: 10px 0;
 	color: #fff;
 	pointer-events: none;
-	transition: .5s;
-}
+	transition: .5s;}
 #login-submit-button {
-	width: 100%;
-}
-.auth-input:focus ~ label,
-.auth-input:valid ~ label {
-  top: calc(var(--default-font-size) * -1);
-  left: 0;
-  color: var(--dark-gold-color);
-  font-size: calc(var(--default-font-size) * 0.7);
-}
+	width: 100%;}
+.auth-input:focus ~ label, .auth-input:valid ~ label {
+top: calc(var(--default-font-size) * -1);
+left: 0;
+color: var(--dark-gold-color);
+font-size: calc(var(--default-font-size) * 0.7);}
 #no-account, #yet-account {
-	margin-top: 2.5vh;
-}
-#no-account *, #yet-account * {
-	font-size: calc(var(--default-font-size) * 0.8);
-}
+	margin-top: 2.5vh;}
 #no-account a, #yet-account a {
-	font-weight: 800;
+	font-weight: 800;}
+/* ! ROOM LIST ! */
+#rooms-content {
+	background-color: black;
+	text-align: center;}
+#rooms-frame {
+	height: 55vh;
+	width: 90vw;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);}
+#rooms-code-input {
+	width: calc(50%); /* 6 caracs */}
+.rooms-button {
+	display: block;
+	padding: 2vh 0;
+	margin: 2vh 0;
+	width: 100%;}
+/* ! FLIP FRAME ! */
+.front, .back {background-color: rgba(0, 0, 0, 0.8);
+	height: inherit;
+	width: inherit;
+	position: absolute;
+	text-align: center;
+	padding: 3%;
+	box-sizing: border-box;
+	box-shadow: 0 0 5vh rgba(0, 0, 0, 0.8), 0 0 15vh rgba(0, 0, 0, 0.9);
+	border-radius: 2vh;
+	transform-style: preserve-3d;
+	backface-visibility: hidden;
+	transition: all .4s ease-in-out;}
+.front {
+	z-index: 900;
+	transform: rotateX(0deg) rotateY(0deg);}
+.back {
+	z-index: 1000;
+	transform: rotateY(-180deg);}
+.flip .front {
+	transform: rotateY(180deg);}
+.flip .back {
+	transform: rotateX(0deg) rotateY(0deg);}
+.rooms-flip-button {
+	position: absolute;
+	width: 94%;
+	bottom: 0;} 
+
+@media only screen and (min-width: 65vh){
+	/* ! HOVER EFFECTS ! */
+	button:hover, .button:hover {
+		color: white;
+		box-shadow: 0 0 2vh var(--gold-color);
+		cursor: pointer;}
+	a:hover {
+		color: var(--gold-color);
+		cursor: pointer;}
+	#navbar-register-button:hover, #navbar-logout-button:hover {
+		color: white;}
+	#navbar-logout-button:hover {
+		color: white;
+		box-shadow: 0 0 2vh var(--red-color);}
+	#home-play-button:hover {
+		color: white;
+		box-shadow: 0 0 2vh var(--gold-color), 0 0 5vh var(--gold-color);
+		cursor: pointer;}
 }
