--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -14,6 +14,7 @@
 			type="text/css"
 			href="{% static 'myapp/test-style.css' %}"
 		/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="navbar">
@@ -43,15 +44,13 @@
 				</a>
 			</div>
 			<div id="navbar-right" class="navbar-element navbar-element-extremity">
-				<!-- show registration & login only if user is not yet authenticated -->
 				{% if not user.is_authenticated %}
-                    <a id="login-link" class="navbar-link" href="{% url 'login' %}">Login</a>
-					<a id="register-button" class="navbar-link button" href="{% url 'register' %}">
-                        Register
+                    <a id="navbar-login-link" class="navbar-link" href="{% url 'login' %}">Login</a>
+					<a id="navbar-register-button" class="navbar-link button" href="{% url 'register' %}">
+                        Signup
                     </a>
 				{% else %}
-				    <!-- show sign out only if user is authenticated -->
-                    <a id="signout-button" class="navbar-link button" href="{% url 'logout' %}">Sign Out</a>
+                    <a id="navbar-logout-button" class="navbar-link button" href="{% url 'logout' %}">Logout</a>
 				{% endif %}
 			</div>
 		</div>
