--- a/myapp/templates/myapp/rooms.html
+++ b/myapp/templates/myapp/rooms.html
@@ -133,40 +133,40 @@
 			<button id="rooms-search-button" class="rooms-button rooms-flip-button">Show open rooms</button>	
 		</div>
 		<div id="rooms-back-panel">
-			<table id="rooms-table">
+			<table id="rooms-table-titles" class="rooms-table">
 				<tr id="rooms-title-line" class="rooms-table-line">
-					<th class="rooms-line-code rooms-table-element">Code :</th>
+					<th class="rooms-line-code rooms-table-element">Code</th>
 					<th class="rooms-line-user-count rooms-table-element">Players</th>
 					<th class="rooms-line-usernames rooms-table-element">Player list
 					</th>
 					<th class="rooms-line-join-form rooms-table-element">
 					</th>
 				</tr>
-				<div id="rooms-list">
-					{% for room in rooms_data %}
-					<tr class="rooms-table-line rooms-{{ room.code }}">
-						<th class="rooms-line-code rooms-table-element">{{ room.code }}</th>
-						<th class="rooms-line-user-count rooms-table-element">{{ room.usernames|length }}</th>
-						<th class="rooms-line-usernames rooms-table-element">
-							<ul>
-								{% for username in room.usernames %}
-								<li class="rooms-username">{{ username }}</li>
-								{% endfor %}
-							</ul>
-						</th>
-						<th class="rooms-line-join-form rooms-table-element">
-							<form action="/room/{{ room.code }}/" method="post">
-								{% csrf_token %}
-								<button class="rooms-line-join-button" type="submit">Join room</button>
-							</form>
-						</th>
-					</li>
-					</tr>
-					{% endfor %}
-				</div>
+			</table>
+			<table id="rooms-table-content" class="rooms-table">
+				{% for room in rooms_data %}
+				<tr class="rooms-table-line rooms-{{ room.code }}">
+					<th class="rooms-line-code rooms-table-element">{{ room.code }}</th>
+					<th class="rooms-line-user-count rooms-table-element">{{ room.usernames|length }}</th>
+					<th class="rooms-line-usernames rooms-table-element">
+						<ul>
+							{% for username in room.usernames %}
+							<li class="rooms-username">{{ username }}</li>
+							{% endfor %}
+						</ul>
+					</th>
+					<th class="rooms-line-join-form rooms-table-element">
+						<form action="/room/{{ room.code }}/" method="post">
+							{% csrf_token %}
+							<button class="rooms-line-join-button" type="submit">Join room</button>
+						</form>
+					</th>
+				</li>
+				</tr>
+				{% endfor %}
 			</table>
 			<br>
-			<button class="rooms-button rooms-flip-button">Back</button>	
+			<button id="rooms-back-button" class="rooms-button rooms-flip-button">Back</button>	
 		</div>
 	</div>
 </div>
