--- a/myapp/static/myapp/test-style.css
+++ b/myapp/static/myapp/test-style.css
@@ -224,7 +224,6 @@ input {
 	margin: 1.5vh 0;
 	width: calc(50%);
 }
-
 .rooms-button {
 	display: block;
 	padding: 2vh 0;
@@ -235,11 +234,11 @@ input {
 #rooms-front-panel,
 #rooms-back-panel {
 	background-color: rgba(0, 0, 0, 0.8);
-	height: inherit;
-	width: inherit;
-	position: absolute;
+	height: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
+	position: absolute;
 	text-align: center;
 	padding: 3%;
 	box-sizing: border-box;
@@ -249,6 +248,12 @@ input {
 	backface-visibility: hidden;
 	transition: all 0.4s ease-in-out;
 }
+.flip #rooms-front-panel {
+	transform: rotateY(180deg);
+}
+.flip #rooms-back-panel {
+	transform: rotateX(0deg) rotateY(0deg);
+}
 #rooms-front-panel {
 	z-index: 900;
 	transform: rotateX(0deg) rotateY(0deg);
@@ -257,50 +262,34 @@ input {
 	z-index: 1000;
 	transform: rotateY(-180deg);
 }
-.flip #rooms-front-panel {
-	transform: rotateY(180deg);
-}
-.flip #rooms-back-panel {
-	transform: rotateX(0deg) rotateY(0deg);
-}
-.rooms-flip-button {
+#rooms-table-content {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow-y: scroll;
+	table-layout: fixed;
 	width: 100%;
 }
-#rooms-avatar-selector {
-	flex: 1;
-	background-color: red;
-}
-
-#rooms-table-content {
-	flex: 1;
-	overflow-y: auto;
-}
-#rooms-back-button {
-	background-color: transparent;
-	border: solid;
-}
-
-.rooms-line-usernames {
-	display: none;
+.rooms-table-line {
+	display: flex;
+	margin: 0.5vh;
 }
 .rooms-line-code {
+	flex: 1;
 	text-align: left;
 }
-.rooms-line-user-count,
-.rooms-line-usernames {
+.rooms-line-user-count {
+	flex: 1;
 	text-align: center;
 }
 .rooms-line-join-form {
+	flex: 1;
 	text-align: right;
 }
-.rooms-table-element {
-	width: 30%;
-}
-#rooms-line-join-button {
-	height: 50px;
-}
-#rooms-table-content.rooms-table-line.rooms-line-user-count {
-	width: 2vw;
+/* ! AVATAR SELECTOR ! */
+#rooms-avatar-selector {
+	flex: 1;
+	background-color: red;
 }
 
 @media only screen and (min-width: 65vh) {
